--- a/README
+++ b/README
@@ -1,3 +1,2 @@
-To run: python main.python
-To compile: python3 -m nuitka main.py --output-filename=EpiDays --onefile --remove-output --quiet --enable-plugin=tk-inter|PySide6|PySide2|PyQt6|PyQt5
-tenho de adicionar o resto das flags para tk e pra gui
+To run: python main.py
+To compile: python -m PyInstaller --onefile --icon=icon.ico --name EpiDays_v0.1 main.py
